--- a/02_Tables_Tablets_and_Sharding.ipynb
+++ b/02_Tables_Tablets_and_Sharding.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "%store -r MY_DB_NAME\n",
     "%store -r MY_YB_PATH\n",
     "%store -r MY_HOST_IPv4_01\n",
-    "%store -r MY_HOST_IPv4_02\n",
+    "%store -r MY_HOST_IPv4_02YB_PATH=${1}\n",
     "%store -r MY_HOST_IPv4_03\n",
     "%store -r MY_GITPOD_WORKSPACE_URL\n",
     "\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,28 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "(psycopg2.OperationalError) terminating connection due to unexpected postmaster exit\n",
-      "server closed the connection unexpectedly\n",
-      "\tThis probably means the server terminated abnormally\n",
-      "\tbefore or while processing the request.\n",
-      "\n",
-      "[SQL: select fn_yb_create_stmts(%(WORKSPACE_URL)s)]\n",
-      "[parameters: {'WORKSPACE_URL': 'https://7000-yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io'}]\n",
-      "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#%% python\n",
+    "#%% python, but prepared statements as sql magic\n",
     "if (MY_GITPOD_WORKSPACE_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
@@ -123,27 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "(psycopg2.OperationalError) connection to server at \"127.0.0.1\", port 5433 failed: Connection refused\n",
-      "\tIs the server running on that host and accepting TCP/IP connections?\n",
-      "\n",
-      "[SQL: select count(*) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')]\n",
-      "[parameters: [{'__name__': '__main__', '__doc__': 'Automatically created module for IPython interactive environment', '__package__': None, '__loader__': None, '__s ... (18473 characters truncated) ... ) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')\"}]]\n",
-      "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql \n",
     "select count(*) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')"
@@ -296,7 +265,35 @@
     "\n",
     "> Note\n",
     ">  \n",
-    ">  In gitpod, only the `127.0.0.1` host is available on port 7000, and will show as `https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039` . You are not able to browse `127.0.0.2` or `127.0.0.3`\n"
+    ">  In gitpod, only the `127.0.0.1` host is available on port 7000, and will show as `https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039` . You are not able to browse `127.0.0.2` or `127.0.0.3`\n",
+    "\n",
+    "Or, you can run code below to get the URL to open in your web browser."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "0 rows affected.\n",
+      "+---------------+\n",
+      "| open_this_url |\n",
+      "+---------------+\n",
+      "+---------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%% python, but prepared statements as sql magic\n",
+    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,'tbl_no_pk') as open_this_url ;\n",
+    "\n",
+    "print (view_url)"
    ]
   },
   {
@@ -341,13 +338,8 @@
    "metadata": {},
    "source": [
     "#### Review the Tablet section\n",
-    "For the given table, the Tablet section shows the details for the existing tablets. Of particular interest are the number of tablet leaders and the partition strategy. Here is an abridged example of the Tablet section for the `tbl_no_pk` table:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "For the given table, the Tablet section shows the details for the existing tablets. Of particular interest are the number of tablet leaders and the partition strategy. Here is an abridged example of the Tablet section for the `tbl_no_pk` table:\n",
+    "\n",
     "| Tablet ID |\tPartition\t| SplitDepth\t| State\t| Hidden\t| Message\t| RaftConfig|\n",
     "|--|--|--|--|--|--|--|\n",
     "| some_uuid_1 |\t`hash_split: [0x5555, 0xAAAA)` |\t0\t| Running|\tfalse| Tablet reported with an active leader\t|<li>FOLLOWER: 127.0.0.1 <li>FOLLOWER: 127.0.0.3<li>LEADER: 127.0.0.2  |\n",
@@ -406,14 +398,14 @@
     "\n",
     "YSQL has an built-in function that shows the integer form of the hash code: `yb_hash_code()` . This built-in function returns an integer, making it easier to interpret the hexadecimal values of a hash_splt range.\n",
     "\n",
-    "Because YugabyteDB does not expose `ybrowid`, it is not possible to use `yb_hash_code()` to determine what is the integer valie for the hash code of `ybrowid`. "
+    "However, because YugabyteDB does not expose `ybrowid`, it is not possible to use `yb_hash_code()` to determine what is the integer valie for the hash code of `ybrowid`. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## q 2 | Alter the table and add a Primary Key\n",
+    "## q2 | Alter the table and add a Primary Key\n",
     "To help illuminate how YugabyteDB distributes data, you can create primary key the `k` column of the table. Later, you will use the `yb_code_hash()` built-in function and the primary key to show where various rows live on a given tablet.\n",
     "\n",
     "Because there is not an existing primary key (PK) for `tbl_no_pk`, it is possible to add a one.\n",
@@ -472,8 +464,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### View the Table details in the YB-Master web ui\n",
+    "In your web browser, open the following URL."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "0 rows affected.\n",
+      "+---------------+\n",
+      "| open_this_url |\n",
+      "+---------------+\n",
+      "+---------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%% python, but prepared statements as sql magic\n",
+    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,'tbl_pk_hash') as open_this_url ;\n",
+    "\n",
+    "print (view_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review the Column section\n",
+    "The column section shows details about each column in the table, index, or materialized view. In the column section for `tbl_pk_hash`, you will see:\n",
+    "\n",
+    "\n",
+    "| Column | ID\t| Type |\n",
+    "|--------|------|------|\n",
+    "| k\t         | 1\t| int32 PARTITION KEY | \n",
+    "| v\t         | 2\t| string NULLABLE NOT A PARTITION KEY | \n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "Because there is a primary key defined for this table, there is no `ybrowid` column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review the Tablet section\n",
+    "The Tablet section shows the details for the existing tablets. Here is an abridged example of the Tablet section for the `tbl_pk_hash` table:\n",
+    "\n",
+    "| Tablet ID |\tPartition\t| SplitDepth\t| State\t| Hidden\t| Message\t| RaftConfig|\n",
+    "|--|--|--|--|--|--|--|\n",
+    "| some_uuid_1 |\t`hash_split: [0x5555, 0xAAAA)` |\t0\t| Running|\tfalse| Tablet reported with an active leader\t|<li>FOLLOWER: 127.0.0.1 <li>FOLLOWER: 127.0.0.3<li>LEADER: 127.0.0.2  |\n",
+    "| some_uuid_2\t| `hash_split: [0xAAAA, 0xFFFF)`\t| 0 |  Running |false |\tTablet reported with an active leader |<li>FOLLOWER: 127.0.0.1 <li>LEADER: 127.0.0.3 <li>FOLLOWER: 127.0.0.2 |\n",
+    "| some_uuid_3 <br>(tablet leader where the row lives) |\t`hash_split: [0x0000, 0x5555)` |\t0 |\tRunning | \tfalse\t| Tablet reported with an active leader |\t<li>LEADER: 127.0.0.1<li>FOLLOWER: 127.0.0.3<li>FOLLOWER: 127.0.0.2 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What is the `hash_split` value in the Partition column? \n",
+    "\n",
+    "For a table with hash sharding, each tablet has a Partition value that shows a  `hash_split` . The `hash_split` details a range of hexadecimal values. \n",
+    "```\n",
+    "hash_split: [0x0000, 0x5555)\n",
+    "hash_split: [0x5555, 0xAAAA)\n",
+    "hash_split: [0xAAAA, 0xFFFF)\n",
+    "```\n",
+    "The conversion of the above hexadecimal values to integer values is as follows:\n",
+    "```\n",
+    "0-21845\n",
+    "21845-43690\n",
+    "43690-65535\n",
+    "```\n",
+    "\n",
+    "`tbl_pk_hash` uses consistent has sharding with the partition key being `k`.  All tablets will store rows using the hash coded values for `k`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### q2a | yb_hash_code()\n",
-    "YSQL has an built-in function that shows the integer form of a hashed value, `yb_hash_code()`. Using this function, you can view the hash code value of the primary key. The resulting integer value places the row in the the hash_split range of the tablets.\n",
+    "YSQL has an built-in function that shows the integer form of a hashed value, `yb_hash_code()`, in integer form. Using this function, you can view the hash code value of the primary key, `k`, for `tbl_pk_hash`. \n",
+    "\n",
+    "The resulting integer value places the row in the the hash_split range of the tablets.\n",
     "\n",
     "In the web ui, you can then confirm that the PK has a hash code that lives in the hash_split range of the tablet leader in question.  To help make the conversion from hexadecimal to integer easier, the following query use various utility user-defined functions and shows:\n",
     "- k, the primary key value\n",
@@ -660,7 +742,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Range Sharding\n",
+    "---\n",
+    "## Range Sharding\n",
     "Range sharding splits the rows of a table into contiguous ranges that respect the sort order of the table based on the primary key column values. Typically, a range sharded table begins with only one tablet. With more row insertions, the single tablet eventually splits into two or more tablets. As the data volume for the range sharded table continues to grow, so does the number of tablets for the table. YugabyteDB balances the number of tablet leaders across the YB-TServers in the cluster. Here is an illustrations of range sharding:"
    ]
   },
@@ -683,55 +766,131 @@
    "metadata": {},
    "source": [
     "## q3 | Create a PK table with range sharding\n",
-    "The following table will take about ~10 minutes to create.\n",
+    "The following table will take about\n",
     "- Query when 1000 rows --> results, see natural order\n",
     "- Query when 1000 rows --> results, query in reverse order with order by desc\n",
     "- Query with predicate, offset, limit\n",
     "- Compare hash vs range for range predicate\n",
-    "- Create table with split in range based on data size\n",
-    "  - View table in web ui to see range begin and ends (tablet splitting in action)\n",
     "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "Done.\n",
-      "Done.\n",
-      "35000000 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%sql /* create table no PK and insert rows */\n",
+    "%%sql  /* create table no PK and insert rows */\n",
     "drop table if exists tbl_pk_range;\n",
     "\n",
     "create table if not exists tbl_pk_range (k int, v text, primary key (k asc)) ;\n",
     "\n",
     "insert into tbl_pk_range (k,v)\n",
     "select g.id, format('%s%s',chr(97+CAST(random() * 25 AS INTEGER)),chr(97+CAST(random() * 25 AS INTEGER)))\n",
-    "from generate_series(1, 35000000) AS g (id);"
+    "from generate_series(1, 1000) AS g (id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### View in the YB-Master web ui for the table details\n",
+    "Open the Web UI for the table. Copy and paster the following UR in the web browser:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "1 rows affected.\n",
+      "+--------------------------------------------------------------------------------------------------------------+\n",
+      "|                                                open_this_url                                                 |\n",
+      "+--------------------------------------------------------------------------------------------------------------+\n",
+      "| https://7000-yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io/table?id=00004000000030008000000000004070 |\n",
+      "+--------------------------------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%% python, but prepared statements as sql magic\n",
+    "WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "view_url = %sql select fn_get_table_id(:WORKSPACE_URL,8200,'tbl_pk_range') as open_this_url ;\n",
+    "\n",
+    "print (view_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review the Column section\n",
+    "In the column section for `tbl_pk_range`, you will see:\n",
+    "\n",
+    "\n",
+    "| Column | ID\t| Type |\n",
+    "|--------|------|------|\n",
+    "| k\t         | 1\t| int32 NOT NULL NOT A PARTITION KEY | \n",
+    "| v\t         | 2\t| string NULLABLE NOT A PARTITION KEY | \n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "> Note\n",
+    ">  \n",
+    "> There is no PARTITION KEY (shard key) for the `tbl_pk_range` table. The table specifies a Range Sharding strategy for the primary key (PK).  `k`, the PK, is, however, shown as `NOT NULL`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review the Tablet section\n",
+    "The Tablet section shows the details for the existing tablets. Here is an abridged example of the Tablet section for the `tbl_pk_hash` table:\n",
+    "\n",
+    "| Tablet ID |\tPartition\t| SplitDepth\t| State\t| Hidden\t| Message\t| RaftConfig|\n",
+    "|--|--|--|--|--|--|--|\n",
+    "| some_uuid_1<br>`42ca468817c145c29145752718b7c6a7` |\t`range: [<start>, <end>)` |\t0\t| Running|\tfalse| Tablet reported with an active leader\t|<li>FOLLOWER: 127.0.0.1 <li>FOLLOWER: 127.0.0.3<li>LEADER: 127.0.0.2  |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### q3a | Natural order\n",
+    "Unlike the consistent hash sharding of `tbl_pk_hash`, `tbl_pk_range` preserves the order of the PK. THe following query shows how:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%sql /* explain plan */\n",
+    "select '' as _\n",
+    "  , k\n",
+    "from tbl_pk_range\n",
+    "where 1=1 \n",
+    "-- and k <= 630\n",
+    "-- order by k asc\n",
+    "-- order by k desc\n",
+    "-- OFFSET 330\n",
+    "limit 30\n",
+    ";"
    ]
   },
   {
@@ -751,8 +910,8 @@
     "  , k\n",
     "from tbl_pk_range\n",
     "where 1=1 \n",
-    "-- and k <= 630\n",
-    "order by k asc\n",
+    "and k <= 630\n",
+    "-- order by k asc\n",
     "-- order by k desc\n",
     "-- OFFSET 330\n",
     "limit 30\n",
@@ -772,17 +931,6 @@
     "%%sql\n",
     "execute stmt_util_metrics_snap_table;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
