--- a/02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "A tablet represents a table shard which contains a set of rows for the logical table. Each tablet is a customized RocksDB instance. A tablet leader has a peer group known as tablet followers, and this group of tablet peers exists as a Raft consensus group. YugabyteDB calls this distributed document store, DocDB.\n",
     "\n",
-    "In this notebook, using Explain Plans, built-in functions, and custom utilities for YB-TServer metrics, you will learn about how YugabyteDB stores data for a table, as table shards, known as tablets. You will also learn how YugabyteDB reads tablet data during query execution.\n",
+    "In this notebook, using Explain Plans, built-in functions, and custom utilities for YB-TServer metrics, you will learn how YugabyteDB stores data for a table in one or more tablets. You will also learn how YugabyteDB reads tablet data during query execution.\n",
     "\n",
     "\n",
     "## Requirements\n",
@@ -57,7 +57,7 @@
     "%store -r MY_DB_NAME\n",
     "%store -r MY_YB_PATH\n",
     "%store -r MY_HOST_IPv4_01\n",
-    "%store -r MY_HOST_IPv4_02YB_PATH=${1}\n",
+    "%store -r MY_HOST_IPv4_02\n",
     "%store -r MY_HOST_IPv4_03\n",
     "%store -r MY_GITPOD_WORKSPACE_URL\n",
     "\n",
@@ -149,7 +149,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## q1 | Create a table with no Primary Key (PK)\n",
+    "---\n",
+    "## Hash Sharding\n",
+    "\n",
+    "### q1 | Create a table with no Primary Key (PK)\n",
     "For this first example, without explicitly defining a primary key, you will create a table. Then, you will review the Explain Plan for a query, and also review the RocksDB metrics for the query."
    ]
   },
@@ -196,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### q1a | Query the table for a value of k\n",
+    "#### q1a | Query the table for a value of k\n",
     "\n",
     "The following is a query that will show the Explain Plan for the query. The first statement resets the metrics that will be captured after running the query. The query itself has a `where` clause predicate for `k` . "
    ]
@@ -228,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q1a | Explain Plan (above ^^)\n",
+    "##### q1a | Explain Plan (above ^^)\n",
     "Because YugabyteDB reuses the PostgreSQL query layer, it is possible to view an Explain Plan for a query. The query optimizer generates the Explain Plan for the stated query execution.\n",
     "The Explain Plan for this query shows:\n",
     "- `Seq Scan on public.tbl_no_pk (actual time=7.912..11.720 rows=1 loops=1)`\n",
@@ -260,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q1a | Metrics (above ^^)\n",
+    "##### q1a | Metrics (above ^^)\n",
     "\n",
     "The Explain Plan revealed that in order to return the single row result, the query first read 1000 rows and then filtered out 999 rows.\n",
     "\n",
@@ -419,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## q2 | Alter the table and add a Primary Key\n",
+    "### q2 | Alter the table and add a Primary Key\n",
     "To help illuminate how YugabyteDB distributes data, you can a create primary key  for the `k` column of the table. Later, you will use the `yb_code_hash()` built-in function and the primary key to show where various rows live on a given tablet.\n",
     "\n",
     "Because there is not an existing primary key (PK) for `tbl_no_pk`, it is possible to add a one.\n",
@@ -488,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### View the Table details in the YB-Master web ui\n",
+    "#### View the Table details in the YB-Master web ui\n",
     "In your web browser, open the following URL."
    ]
   },
@@ -509,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Review the Column section\n",
+    "##### Review the Column section\n",
     "The column section shows details about each column in the table, index, or materialized view. In the column section for `tbl_pk_hash`, you will see:\n",
     "\n",
     "\n",
@@ -538,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Review the Tablet section\n",
+    "##### Review the Tablet section\n",
     "The Tablet section shows the details for the existing tablets. Here is an abridged example of the Tablet section for the `tbl_pk_hash` table:\n",
     "\n",
     "| Tablet ID |\tPartition\t| SplitDepth\t| State\t| Hidden\t| Message\t| RaftConfig|\n",
@@ -574,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### q2a | yb_hash_code()\n",
+    "#### q2a | yb_hash_code()\n",
     "YSQL has an built-in function that shows the integer form of a hash coded value, `yb_hash_code()`. \n",
     "\n",
     "Using `yb_hash_code()`, you can view the hash code value of the primary key, `k`, for `tbl_pk_hash`. \n",
@@ -618,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q2a | Observations\n",
+    "##### q2a | Observations\n",
     "The results show that the 30 returned rows are distributed among all of the hash_split ranges, meaning that each tablet leader is returning results. The results are sorted in an ascending order of K values."
    ]
   },
@@ -626,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q2a | Experiment\n",
+    "##### q2a | Experiment\n",
     "Question: \n",
     "- In the query cell above, comment out the `order by k` line. Rerun the query cell. What new observations can you make about the results?\n",
     "\n",
@@ -649,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### q2b | View the explain plan and metrics\n",
+    "#### q2b | View the explain plan and metrics\n",
     "Using the same query, you will generate an Explain Plan and the view the metrics.\n",
     "\n",
     "Just like the section before, you will then modify and rerun the query to answer various questions."
@@ -715,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q2b | Metrics (above ^^)\n",
+    "##### q2b | Metrics (above ^^)\n",
     "In the initial query, the `Seq Scan` accesses all tablets leaders:\n",
     "\n",
     "| row_name| \trocksdb_number_db_seek | \trocksdb_number_db_next | \n",
@@ -729,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q2b | Experiment\n",
+    "##### q2b | Experiment\n",
     "Question: \n",
     "- In the query cell above, comment out the `order by k` line. Rerun the query cell. What new observations can you make about the results?\n",
     "\n",
@@ -790,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## q3 | Create a table with range sharding\n",
+    "### q3 | Create a table with range sharding\n",
     "By running the following cell, you will create a table with a primary key that employs range sharding:"
    ]
   },
@@ -839,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Review the Column section\n",
+    "##### Review the Column section\n",
     "In the column section for `tbl_pk_range`, you will see:\n",
     "\n",
     "\n",
@@ -859,7 +862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Review the Tablet section\n",
+    "##### Review the Tablet section\n",
     "The Tablet section shows the details for the existing tablets. Here is an abridged example of the Tablet section for the `tbl_pk_hash` table:\n",
     "\n",
     "| Tablet ID |\tPartition\t| SplitDepth\t| State\t| Hidden\t| Message\t| RaftConfig|\n",
@@ -884,7 +887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### q3a | Natural order\n",
+    "#### q3a | Natural order\n",
     "Unlike the consistent hash sharding of `tbl_pk_hash`, `tbl_pk_range` preserves the order of the PK. To view the difference, run the following query cell:"
    ]
   },
@@ -947,7 +950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q3a | Explain Plan (above ^^)\n",
+    "##### q3a | Explain Plan (above ^^)\n",
     "\n",
     "The Explain Plan shows that this query uses the PK index and reads just one row..\n",
     "- `-> Index Scan using tbl_pk_range_pkey on public.tbl_pk_range (actual time=1.972..1.983 rows=30 loops=1)`\n",
@@ -977,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q3a | Metrics (above ^^)\n",
+    "##### q3a | Metrics (above ^^)\n",
     "\n",
     "The Explain Plan revealed that the query uses the PK index. Because there is only one tablet at this time for the table with range sharding, the Metrics report shows that the query accesses a single tablet. There is just one seek for the offset and then about two reads per row (limit 30)."
    ]
@@ -986,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### q3a | Experiment\n",
+    "##### q3a | Experiment\n",
     "\n",
     "Question: \n",
     "- Uncomment the `order by k desc` line. Rerun the Explain Plan and the Metrics prepared statement. What new observations can you make? \n",
@@ -1009,7 +1012,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## q4 | Comparing Hash and Range Sharding\n",
+    "---\n",
+    "## Comparing hash and range sharding for tables\n",
     "For this challenge, you will the Explain Plan and Metrics report for two sets of queries, each with tables that implement hash and range sharding."
    ]
   },
@@ -1379,7 +1383,7 @@
    "source": [
     "---\n",
     "## Summary\n",
-    "In this notebook, you learned about how YugabyteDB uses two distinct sharding strategies for storing data in a distributed manner:\n",
+    "In this notebook, you learned about how YugabyteDB uses two distinct sharding strategies for storing data in a distributed manner for tables in tablets:\n",
     "- consistent hash sharding\n",
     "- range sharding\n",
     "\n",
