--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -100,12 +100,12 @@
     " \n",
     "\n",
     "# Comment out Local\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "#MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "#MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "\n",
     "# Gitpod specific\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
