--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -55,8 +55,39 @@
    "source": [
     "## Setup steps\n",
     "Here are the steps to setup this lab:\n",
+    "- Install missing dependencies and restart the notebook\n",
     "- Create the notebook variables\n",
     "- Create the `db_ybu` database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install missing dependcies and restart the notebook\n",
+    "Run the following cell to ensure that the notebook dependencies are available to the notebook. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ipython-sql\n",
+    "!pip install psycopg2-binary\n",
+    "!pip install sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Important\n",
+    "> \n",
+    "> Do NOT skip this step\n",
+    ">\n",
+    "Restart the Notebook and skip to the next step, Create the notebook variables\n"
    ]
   },
   {
@@ -442,8 +473,8 @@
    },
    "source": [
     "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
-    "The following cell requires:\n",
-    "- Python 3.8+ and psycopg2\n"
+    "The following cells requires:\n",
+    "- Python 3.8+ and psycopg2"
    ]
   },
   {
