--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -70,9 +70,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipython-sql in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (0.4.0)\n",
+      "Requirement already satisfied: ipython-genutils>=0.1.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (1.16.0)\n",
+      "Requirement already satisfied: prettytable<1 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (0.7.2)\n",
+      "Requirement already satisfied: sqlparse in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (0.4.2)\n",
+      "Requirement already satisfied: ipython>=1.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (7.31.1)\n",
+      "Requirement already satisfied: sqlalchemy>=0.6.7 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython-sql) (1.4.37)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (3.0.26)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (47.1.0)\n",
+      "Requirement already satisfied: pygments in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (2.11.2)\n",
+      "Requirement already satisfied: jedi>=0.16 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (0.18.1)\n",
+      "Requirement already satisfied: decorator in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: backcall in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: matplotlib-inline in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (0.1.3)\n",
+      "Requirement already satisfied: appnope in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (0.1.2)\n",
+      "Requirement already satisfied: pexpect>4.3 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (4.8.0)\n",
+      "Requirement already satisfied: pickleshare in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
+      "Requirement already satisfied: traitlets>=4.2 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from ipython>=1.0->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from sqlalchemy>=0.6.7->ipython-sql) (1.1.2)\n",
+      "Requirement already satisfied: importlib-metadata in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from sqlalchemy>=0.6.7->ipython-sql) (4.11.4)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from jedi>=0.16->ipython>=1.0->ipython-sql) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from pexpect>4.3->ipython>=1.0->ipython-sql) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql) (0.2.5)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.4 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from importlib-metadata->sqlalchemy>=0.6.7->ipython-sql) (4.2.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from importlib-metadata->sqlalchemy>=0.6.7->ipython-sql) (3.8.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: psycopg2-binary in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (2.9.3)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: sqlalchemy in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.4.37)\n",
+      "Requirement already satisfied: importlib-metadata in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from sqlalchemy) (4.11.4)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from sqlalchemy) (1.1.2)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from importlib-metadata->sqlalchemy) (3.8.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.4 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from importlib-metadata->sqlalchemy) (4.2.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install ipython-sql\n",
     "!pip install psycopg2-binary\n",
@@ -83,11 +128,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Important\n",
+    "> Important!\n",
     "> \n",
-    "> Do NOT skip this step\n",
-    ">\n",
-    "Restart the Notebook and skip to the next step, Create the notebook variables\n"
+    "> Restart the Notebook .\n",
+    "> Do NOT skip this step.\n",
+    "> Start below at **Create the notebook variables**\n"
    ]
   },
   {
@@ -587,7 +632,7 @@
     "  - Created tables and loaded data using DDL and DML scripts\n",
     "  - Connected to the database using a PostgreSQL driver for Python\n",
     "\n",
-    "Next, open `02_Tables_Tablets_and_Sharding.ipynb`"
+    "Next, open `02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb`"
    ]
   },
   {
@@ -601,7 +646,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open 02_Tables_Tablets_and_Sharding.ipynb"
+    "gp open 02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb"
    ]
   }
  ],
