--- a/02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/02_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -1417,7 +1417,38 @@
    "source": [
     "## Additional reading\n",
     "\n",
-    "To learn more about tables, tablets, and sharding, check out these resources in the Course Player."
+    "To learn more about tables, tablets, and sharding, check out the resources in the Course Player."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# That's It!\n",
+    "\n",
+    "In this lab, you completed the following:\n",
+    "\n",
+    "- Created tables using both hash and range sharding\n",
+    "- Viewed Explain Plans and metrics reports for various queries\n",
+    "- Viewed the `yb_hash_code()` results to better discern data distribution\n",
+    "\n",
+    "\n",
+    "Next, open `03_Anatomy_of_an_Index.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "gp open 03_Anatomy_of_an_Index.ipynb`"
    ]
   }
  ],
