--- a/01_YSQL_inter_demo.ipynb
+++ b/01_YSQL_inter_demo.ipynb
@@ -124,12 +124,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_GITPOD_WORKSPACE_URL' (str)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_NOTEBOOK_DIR' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n",
+      "Stored 'MY_NOTEBOOK_DATA_FOLDER' (str)\n",
+      "Stored 'MY_NOTEBOOK_UTILS_FOLDER' (str)\n",
+      "Stored 'MY_DATA_DDL_FILE' (str)\n",
+      "Stored 'MY_DATA_DML_FILE' (str)\n",
+      "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n",
+      "Stored 'MY_SUDO' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -187,13 +209,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> mtu 16384\n",
+      "\toptions=1203<RXCSUM,TXCSUM,TXSTATUS,SW_TIMESTAMP>\n",
+      "\tinet 127.0.0.1 netmask 0xff000000 \n",
+      "\tinet6 ::1 prefixlen 128 \n",
+      "\tinet6 fe80::1%lo0 prefixlen 64 scopeid 0x1 \n",
+      "\tinet 127.0.0.2 netmask 0xff000000 \n",
+      "\tinet 127.0.0.3 netmask 0xff000000 \n",
+      "\tinet 127.0.0.4 netmask 0xff000000 \n",
+      "\tinet 127.0.0.5 netmask 0xff000000 \n",
+      "\tinet 127.0.0.6 netmask 0xff000000 \n",
+      "\tinet 127.0.0.7 netmask 0xff000000 \n",
+      "\tnd6 options=201<PERFORMNUD,DAD>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Password:"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_SUDO\"  # ifconfig aliases\n",
     "MY_SUDO=${1}\n",
@@ -220,13 +268,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping cluster.\n",
+      "Destroying cluster.\n",
+      "Creating cluster.\n",
+      "Waiting for cluster to be ready.\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/markkim/yugabyte-data                                               |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "For more info, please use: yb-ctl status\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node Count: 3 | Replication Factor: 3                                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| Web UI              : http://127.0.0.1:7000/                                                     |\n",
+      "| Cluster Data        : /Users/markkim/yugabyte-data                                               |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 1: yb-tserver (pid 33414), yb-master (pid 33405)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.1:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh                                                                 |\n",
+      "| YCQL Shell          : bin/ycqlsh                                                                 |\n",
+      "| YEDIS Shell         : bin/redis-cli                                                              |\n",
+      "| data-dir[0]         : /Users/markkim/yugabyte-data/node-1/disk-1/yb-data                         |\n",
+      "| yb-tserver Logs     : /Users/markkim/yugabyte-data/node-1/disk-1/yb-data/tserver/logs            |\n",
+      "| yb-master Logs      : /Users/markkim/yugabyte-data/node-1/disk-1/yb-data/master/logs             |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 2: yb-tserver (pid 33417), yb-master (pid 33408)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.2:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.2                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.2                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.2                                                 |\n",
+      "| data-dir[0]         : /Users/markkim/yugabyte-data/node-2/disk-1/yb-data                         |\n",
+      "| yb-tserver Logs     : /Users/markkim/yugabyte-data/node-2/disk-1/yb-data/tserver/logs            |\n",
+      "| yb-master Logs      : /Users/markkim/yugabyte-data/node-2/disk-1/yb-data/master/logs             |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| Node 3: yb-tserver (pid 33420), yb-master (pid 33411)                                            |\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "| JDBC                : jdbc:postgresql://127.0.0.3:5433/yugabyte                                  |\n",
+      "| YSQL Shell          : bin/ysqlsh -h 127.0.0.3                                                    |\n",
+      "| YCQL Shell          : bin/ycqlsh 127.0.0.3                                                       |\n",
+      "| YEDIS Shell         : bin/redis-cli -h 127.0.0.3                                                 |\n",
+      "| data-dir[0]         : /Users/markkim/yugabyte-data/node-3/disk-1/yb-data                         |\n",
+      "| yb-tserver Logs     : /Users/markkim/yugabyte-data/node-3/disk-1/yb-data/tserver/logs            |\n",
+      "| yb-master Logs      : /Users/markkim/yugabyte-data/node-3/disk-1/yb-data/master/logs             |\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
     "YB_PATH=${1}\n",
@@ -275,13 +389,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "NOTICE:  database \"db_ybu\" does not exist, skipping\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DROP DATABASE\n",
+      "CREATE DATABASE\n",
+      "                                   List of databases\n",
+      "      Name       |  Owner   | Encoding | Collate |    Ctype    |   Access privileges   \n",
+      "-----------------+----------+----------+---------+-------------+-----------------------\n",
+      " db_ybu          | yugabyte | UTF8     | C       | en_US.UTF-8 | \n",
+      " postgres        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " system_platform | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " template0       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " template1       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " yugabyte        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      "(6 rows)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
